--- a/tmux.conf
+++ b/tmux.conf
@@ -1,8 +1,8 @@
 set-option -g status-keys vi
 set-option -g repeat-time 1000
 
-set-option display-panes-time 6000
-set-option display-time 6000
+set-option -g display-panes-time 6000
+set-option -g display-time 6000
 
 set-option -g history-limit 100000
 
