--- a/tmux.conf
+++ b/tmux.conf
@@ -6,6 +6,8 @@ set-option -g display-time 6000
 
 set-option -g history-limit 100000
 
+set -g default-terminal "xterm-256color"
+
 set-window-option -g mode-keys vi
 
 bind-key C-a send-prefix
