--- a/tmux.conf
+++ b/tmux.conf
@@ -4,7 +4,9 @@ set-option -g repeat-time 1000
 set-option -g display-panes-time 6000
 set-option -g display-time 6000
 
-set-option -g history-limit 100000
+set-option -g history-limit 10000
+
+set-option -g renumber-windows on
 
 set -g default-terminal "xterm-256color"
 
@@ -38,3 +40,7 @@ bind-key -r Down resize-pane -D 1
 # DBD: Default keybinding, expect allowing repeating
 bind-key -r o select-pane -t :.+
 
+setw -g window-status-format "#I:(#(basename #{pane_current_path})) #W  |"
+setw -g window-status-current-format "#I:(#(basename #{pane_current_path})) #W#F |"
+
+set -g status-right " #(basename $PWD) "
