--- a/tmux.conf
+++ b/tmux.conf
@@ -40,7 +40,10 @@ bind-key -r Down resize-pane -D 1
 # DBD: Default keybinding, expect allowing repeating
 bind-key -r o select-pane -t :.+
 
-setw -g window-status-format "#I:(#(basename #{pane_current_path})) #W  |"
-setw -g window-status-current-format "#I:(#(basename #{pane_current_path})) #W#F |"
+# setw -g window-status-format "#I:(#(basename #{pane_current_path})) #W  |"
+# setw -g window-status-current-format "#I:(#(basename #{pane_current_path})) #W#F |"
 
-set -g status-right " #(basename $PWD) "
+# set -g status-right " #(basename $PWD) "
+set -g status-right " #(basename #{pane_current_path}) "
+
+# set -g automatic-rename-format "#{?pane_in_mode,[tmux],#{pane_current_command}}#{?pane_dead,[dead],}"
