--- a/tmux.conf
+++ b/tmux.conf
@@ -22,6 +22,7 @@ bind-key C-C send-keys 'tmux -q set-option default-path $PWD;echo'
 bind-key C-H select-pane -D\; send-keys 'OA'\; select-pane -U
 
 unbind-key l
+unbind-key m
 bind-key h select-pane -L
 bind-key l select-pane -R
 bind-key k select-pane -U
